feat: 實際更新DB&API
